Fixed remaining errors